--- a/index.html
+++ b/index.html
@@ -47,10 +47,13 @@
             <div class="carousel">
                 <div class="carousel-track">
                     <img src="img/tatto.jpg" alt="Tattoo 1" data-animar="b" data-delay="0.2s" />
-                    <img src="img/tatto.jpg" alt="Tattoo 1" data-animar="b" data-delay="0.4s" />
-                    <img src="img/tatto.jpg" alt="Tattoo 1" data-animar="b" data-delay="0.6s" />
-                    <img src="img/tatto.jpg" alt="Tattoo 1" data-animar="b" data-delay="0.8s" />
-                    <img src="img/tatto.jpg" alt="Tattoo 1" data-animar="b" data-delay="1s" />
+                    <img src="img/tatto2.jpeg" alt="Tattoo 1" data-animar="b" data-delay="0.4s" />
+                    <img src="img/tatto3.jpeg" alt="Tattoo 1" data-animar="b" data-delay="0.6s" />
+                    <img src="img/tatto4.jpeg" alt="Tattoo 1" data-animar="b" data-delay="0.8s" />
+                    <img src="img/tatto.jpg" alt="Tattoo 1" data-animar="b" data-delay="0.2s" />
+                    <img src="img/tatto2.jpeg" alt="Tattoo 1" data-animar="b" data-delay="0.4s" />
+                    <img src="img/tatto3.jpeg" alt="Tattoo 1" data-animar="b" data-delay="0.6s" />
+                    <img src="img/tatto4.jpeg" alt="Tattoo 1" data-animar="b" data-delay="0.8s" />
                 </div>
             </div>
             <div class="pircies">
