--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="container__home">
             <h1>Fanny Tatuadora</h1>
             <p data-animar="d">Terça e Quinta - 10:00 ás 21:00.</p>
-            <p data-animar="e">Sabadó - 11:00 ás 20:00.</p>
+            <p data-animar="e">Sábado - 11:00 ás 20:00.</p>
             <p data-animar="d">Segunda, Quarta, Sexta e Domingo - Fechado.</p>
             <a href="#contato" class="btn" data-animar="e">Agende seu horário</a>
         </div>
@@ -39,7 +39,7 @@
             <h2 data-animar="e">Nossos Serviços</h2>
             <h3>Tattoos</h3>
             <ul>
-                <li data-animar="d">Blackwoek</li>
+                <li data-animar="d">Blackwork</li>
                 <li data-animar="e">Fineline</li>
                 <li data-animar="d">Floral</li>
                 <li data-animar="e">Oriental</li>
@@ -49,11 +49,11 @@
                     <img src="img/tatto.jpg" alt="Tattoo 1" data-animar="b" data-delay="0.2s" />
                     <img src="img/tatto2.jpeg" alt="Tattoo 1" data-animar="b" data-delay="0.4s" />
                     <img src="img/tatto3.jpeg" alt="Tattoo 1" data-animar="b" data-delay="0.6s" />
-                    <img src="img/tatto4.jpeg" alt="Tattoo 1" data-animar="b" data-delay="0.8s" />
-                    <img src="img/tatto.jpg" alt="Tattoo 1" data-animar="b" data-delay="0.2s" />
+                    <img src="img/tatto4jpeg" alt="Tattoo 1" data-animar="b" data-delay="0.8s" />
+                    <img src="img/tatto.jpg" alt="Tattoo 1" data-animar="b" data-delay="1s" />
                     <img src="img/tatto2.jpeg" alt="Tattoo 1" data-animar="b" data-delay="0.4s" />
                     <img src="img/tatto3.jpeg" alt="Tattoo 1" data-animar="b" data-delay="0.6s" />
-                    <img src="img/tatto4.jpeg" alt="Tattoo 1" data-animar="b" data-delay="0.8s" />
+                    <img src="img/tatto4jpeg" alt="Tattoo 1" data-animar="b" data-delay="0.8s" />
                 </div>
             </div>
             <div class="pircies">
