--- a/index.html
+++ b/index.html
@@ -4,146 +4,151 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Fanny Tatto</title>
+    <title>Fanny Tattoo | Tatuagem e Piercing</title>
     <link rel="stylesheet" href="estilo/style.css" />
     <link rel="shortcut icon" href="img/tatologo_1.ico" type="image/x-icon">
 </head>
 
 <body>
-    <header class="hero" data-animar="b">
+    <header class="hero">
         <div class="logo" data-animar="c">
-            <img src="img/tatologo.jpg" alt="logo" width="100%" height="100%">
+            <img src="img/tatologo.jpg" alt="Logo Fanny Tattoo" width="100%" height="100%">
         </div>
 
         <div class="container__home">
             <h1>Fanny Tatuadora</h1>
-            <p data-animar="d">Terça e Quinta - 10:00 ás 21:00.</p>
-            <p data-animar="e">Sábado - 11:00 ás 20:00.</p>
+            <p data-animar="d">Terça e Quinta - 10:00 às 21:00.</p>
+            <p data-animar="e">Sábado - 11:00 às 20:00.</p>
             <p data-animar="d">Segunda, Quarta, Sexta e Domingo - Fechado.</p>
             <a href="#contato" class="btn" data-animar="e">Agende seu horário</a>
         </div>
     </header>
 
-    <section class="sobre">
-        <div class="container">
-            <h2 data-animar="c">Olá! Sou a Fanny</h2>
-            <p data-animar="d"> tatuadora há 4 anos, especializada em traços finos.</p>
-            <p data-animar="c">Busco sempre evoluir para entregar resultados de qualidade, com atendimento acolhedor,
-                sem pressa ou pressão. Amo o que faço e estou em constante crescimento para ser uma profissional cada
-                vez melhor.</p>
-        </div>
-    </section>
-
-    <section class="galeria">
-        <div class="container">
-            <h2 data-animar="e">Nossos Serviços</h2>
-            <h3>Tattoos</h3>
-            <ul>
-                <li data-animar="d">Blackwork</li>
-                <li data-animar="e">Fineline</li>
-                <li data-animar="d">Floral</li>
-                <li data-animar="e">Oriental</li>
-            </ul>
-            <div class="carousel">
-                <div class="carousel-track">
-                    <img src="img/tatto.jpg" alt="Tattoo 1" data-animar="b" data-delay="0.2s" />
-                    <img src="img/tatto2.jpeg" alt="Tattoo 1" data-animar="b" data-delay="0.4s" />
-                    <img src="img/tatto3.jpeg" alt="Tattoo 1" data-animar="b" data-delay="0.6s" />
-                    <img src="img/tatto4jpeg" alt="Tattoo 1" data-animar="b" data-delay="0.8s" />
-                    <img src="img/tatto.jpg" alt="Tattoo 1" data-animar="b" data-delay="1s" />
-                    <img src="img/tatto2.jpeg" alt="Tattoo 1" data-animar="b" data-delay="0.4s" />
-                    <img src="img/tatto3.jpeg" alt="Tattoo 1" data-animar="b" data-delay="0.6s" />
-                    <img src="img/tatto4jpeg" alt="Tattoo 1" data-animar="b" data-delay="0.8s" />
-                </div>
+    <main>
+        <section class="sobre">
+            <div class="container">
+                <h2 data-animar="c">Olá! Sou a Fanny</h2>
+                <p data-animar="d">Tatuadora há 4 anos, especializada em traços finos.</p>
+                <p data-animar="c">Busco sempre evoluir para entregar resultados de qualidade, com atendimento
+                    acolhedor,
+                    sem pressa ou pressão. Amo o que faço e estou em constante crescimento para ser uma profissional
+                    cada
+                    vez melhor.</p>
             </div>
-            <div class="pircies">
-                <h3>Piercing</h3>
-                <ul data-animar="b">
-                    <li>Body</li>
-                    <li>Intimos</li>
+        </section>
+
+        <section class="galeria">
+            <div class="container">
+                <h2 data-animar="e">FANNY & DALESTE</h2>
+                <h3>TATUADORA: Fanny</h3>
+                <ul>
+                    <li data-animar="d">Blackwork</li>
+                    <li data-animar="e">Fineline</li>
+                    <li data-animar="d">Floral</li>
+                    <li data-animar="e">Oriental</li>
                 </ul>
+
                 <div class="carousel">
                     <div class="carousel-track">
-                        <img src="img/body.jpg" alt="piercing" data-animar="b" data-delay="0.2s" />
-                        <img src="img/intimo.jpg" alt="piercing" data-animar="b" data-delay="0.4s" />
-                        <img src="img/body3.jpeg" alt="piercing" data-animar="b" data-delay="0.6s" />
-                        <img src="img/intimo2.jpeg" alt="piercing" data-animar="b" data-delay="0.8s" />
-                        <img src="img/body.jpg" alt="piercing" data-animar="b" data-delay="0.2s" />
-                        <img src="img/intimo.jpg" alt="piercing" data-animar="b" data-delay="0.4s" />
-                        <img src="img/body3.jpeg" alt="piercing" data-animar="b" data-delay="0.6s" />
-                        <img src="img/intimo2.jpeg" alt="piercing" data-animar="b" data-delay="0.8s" />
+                        <img src="img/tatto.jpg" alt="Tattoo Blackwork" data-animar="b" />
+                        <img src="img/tatto2.jpeg" alt="Tattoo Fineline" data-animar="b" />
+                        <img src="img/tatto3.jpeg" alt="Tattoo Floral" data-animar="b" />
+                        <img src="img/tatto4.jpeg" alt="Tattoo Oriental" data-animar="b" />
+                        <img src="img/tatto.jpg" alt="Tattoo Blackwork2" data-animar="b" />
+                        <img src="img/tatto2.jpeg" alt="Tattoo Fineline2" data-animar="b" />
                     </div>
                 </div>
-                <div class="card_container">
-                    <div class="card__" data-animar="c">
-                        <h2>Piercings Íntimos</h2>
-                        <p>Vaginal Aço Cirúrgico: R$80,00</p>
-                        <p>Vaginal Titânio J-Bar: R$150,00</p>
-                        <p>Mamilo 1 lado: R$50,00</p>
-                        <p>Mamilo 2 lados: R$80,00</p>
-                        <p>Joias detalhadas alteram valor</p>
+
+                <div class="pircies">
+                    <h3>BODY PIERCING: Daleste</h3>
+                    <ul data-animar="b">
+                        <li>Body</li>
+                        <li>Íntimos</li>
+                    </ul>
+
+                    <div class="carousel">
+                        <div class="carousel-track">
+                            <img src="img/body.jpg" alt="Piercing Body" data-animar="b" />
+                            <img src="img/intimo.jpg" alt="Piercing Íntimo" data-animar="b" />
+                            <img src="img/body3.jpeg" alt="Piercing Body 2" data-animar="b" />
+                            <img src="img/intimo2.jpeg" alt="Piercing Íntimo 2" data-animar="b" />
+                            <img src="img/body.jpg" alt="Piercing Body2" data-animar="b" />
+                            <img src="img/intimo.jpg" alt="Piercing Íntimo2" data-animar="b" />
+                        </div>
                     </div>
 
-                    <div class="card__" data-animar="c">
-                        <h2>Body Piercing</h2>
-                        <p>1 aplicação: R$40,00</p>
-                        <p>2 aplicações: R$70,00</p>
-                        <p>3 aplicações: R$100,00</p>
-                        <p>Não inclui piercings íntimos</p>
-                        <p>Joias detalhadas: a partir de R$55,00</p>
-                    </div>
+                    <div class="card_container">
+                        <div class="card__" data-animar="c">
+                            <h2>Piercings Íntimos</h2>
+                            <p>Vaginal Aço Cirúrgico: R$80,00</p>
+                            <p>Vaginal Titânio J-Bar: R$150,00</p>
+                            <p>Mamilo 1 lado: R$50,00</p>
+                            <p>Mamilo 2 lados: R$80,00</p>
+                            <p>Joias detalhadas alteram valor</p>
+                        </div>
 
-                    <div class="card__" data-animar="c">
-                        <h2>Perfurações</h2>
-                        <p>Ponta da Língua: R$50,00</p>
-                        <p>Transversal: R$70,00</p>
-                        <p>Surface: R$50,00</p>
-                        <p>Joia simples (aço cirúrgico)</p>
+                        <div class="card__" data-animar="c">
+                            <h2>Body Piercing</h2>
+                            <p>1 aplicação: R$40,00</p>
+                            <p>2 aplicações: R$70,00</p>
+                            <p>3 aplicações: R$100,00</p>
+                            <p>Não inclui piercings íntimos</p>
+                            <p>Joias detalhadas: a partir de R$55,00</p>
+                        </div>
+
+                        <div class="card__" data-animar="c">
+                            <h2>Perfurações</h2>
+                            <p>Ponta da Língua: R$50,00</p>
+                            <p>Transversal: R$70,00</p>
+                            <p>Surface: R$50,00</p>
+                            <p>Joia simples (aço cirúrgico)</p>
+                            <p>Microdermal com joia em titânio: R$180,00</p>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
-    </section>
+        </section>
 
-    <section class="depoimentos">
-        <div class="container">
-            <h2 data-animar="b">O que dizem nossos clientes</h2>
-            <blockquote data-animar="c" data-delay="0.4s">"Ambiente incrível e profissionais excelentes! Minha tattoo
-                ficou perfeita!" — Ana S.
-            </blockquote>
-            <blockquote data-animar="c" data-delay="0.6s">"Atendimento top! Recomendo de olhos fechados." — João R.
-            </blockquote>
-        </div>
-    </section>
-
-    <section class="contato" id="contato">
-        <div class="container">
-            <h2 data-animar="d" data-delay="0.4s">Entre em Contato</h2>
-            <p class="maps" data-animar="d" data-delay="0.5s"><a href="https://maps.app.goo.gl/yzQf5j2jr2nvfjLc7"
-                    target="_blank">📍 Rua Rendeira, 46 - São Paulo, SP</a></p>
-            <p data-animar="d" data-delay="0.6s">📞 (11) 98260-8489</p>
-
-            <div class="sociais">
-                <div class="insta">
-                    <a href="https://www.instagram.com/fanny.bodypiercing.tattoo/" target="_blank"><img
-                            src="img/instagram.png" alt="instagram" width="100%" height="100%"></a>
-                </div>
-
-                <div class="fece">
-                    <a href="#" target="_blank"><img src="img/fecebook.png" alt="fecebook" width="100%"
-                            height="100%"></a>
-                </div>
+        <section class="depoimentos">
+            <div class="container">
+                <h2 data-animar="b">O que dizem nossos clientes</h2>
+                <blockquote data-animar="c">"Ambiente incrível e profissionais excelentes! Minha tattoo ficou perfeita!"
+                    — Ana S.</blockquote>
+                <blockquote data-animar="c">"Atendimento top! Recomendo de olhos fechados." — João R.</blockquote>
             </div>
+        </section>
 
-            <a class="btn-wp" href="https://wa.me/5511982608489" target="_blank" data-animar="e" data-delay="0.9s">Falar
-                no WhatsApp</a>
-        </div>
-    </section>
+        <section class="contato" id="contato">
+            <div class="container">
+                <h2 data-animar="d">Entre em Contato</h2>
+                <p class="maps" data-animar="d"><a href="https://maps.app.goo.gl/yzQf5j2jr2nvfjLc7" target="_blank">📍
+                        Rua Rendeira, 46 - São Paulo, SP</a></p>
+                <p data-animar="d">📞 (11) 98260-8489</p>
 
+                <div class="sociais">
+                    <div class="insta">
+                        <a href="https://www.instagram.com/fanny.bodypiercing.tattoo/" target="_blank">
+                            <img src="img/instagram.png" alt="Instagram" width="100%" height="100%">
+                        </a>
+                    </div>
+
+                    <div class="tiktok">
+                        <a href="#" target="_blank">
+                            <img src="img/tiktok.png" alt="Tiktok" width="100%" height="100%">
+                        </a>
+                    </div>
+                </div>
+
+                <a class="btn-wp" href="https://wa.me/5511982608489" target="_blank" data-animar="e">Falar no
+                    WhatsApp</a>
+            </div>
+        </section>
+    </main>
 
     <footer>
         <p>© 2025 Fanny Tattoo. Todos os direitos reservados.</p>
     </footer>
+
     <script src="script/script.js"></script>
 </body>
 
