adicionado tik tok

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="author" content="Janpierry Santana">
+    <meta name="description" content="estudio de tattoo da Fanny">
+    <meta name="keywords" content="estudio, tatto, tatuagens, piercing, tatto sp">
     <title>Fanny Tattoo | Tatuagem e Piercing</title>
     <link rel="stylesheet" href="estilo/style.css" />
     <link rel="shortcut icon" href="img/tatologo_1.ico" type="image/x-icon">
@@ -16,10 +19,18 @@
         </div>
 
         <div class="container__home">
-            <h1>Fanny Tatuadora</h1>
-            <p data-animar="d">Terça e Quinta - 10:00 às 21:00.</p>
-            <p data-animar="e">Sábado - 11:00 às 20:00.</p>
-            <p data-animar="d">Segunda, Quarta, Sexta e Domingo - Fechado.</p>
+            <h1 data-animar="b">Fanny Tatuadora</h1>
+            <div class="horarios" data-animar="c">
+                <p data-animar="d" class="dia">Segunda a Sexta</p>
+                <p data-animar="e" class="horas">10:00 às 21:00.</p>
+
+                <p data-animar="e" class="dia">Sábado</p>
+                <p data-animar="d" class="horas">11:00 às 20:00.</p>
+
+                <p data-animar="d" class="dia">Domingo</p>
+                <p data-animar="e" class="horas">Fechado.</p>
+            </div>
+
             <a href="#contato" class="btn" data-animar="e">Agende seu horário</a>
         </div>
     </header>
@@ -80,6 +91,7 @@
                     <div class="card_container">
                         <div class="card__" data-animar="c">
                             <h2>Piercings Íntimos</h2>
+                            <small>(com a Fanny.)</small>
                             <p>Vaginal Aço Cirúrgico: R$80,00</p>
                             <p>Vaginal Titânio J-Bar: R$150,00</p>
                             <p>Mamilo 1 lado: R$50,00</p>
@@ -121,6 +133,7 @@
         <section class="contato" id="contato">
             <div class="container">
                 <h2 data-animar="d">Entre em Contato</h2>
+                <span>Atendimento somente com horario marcado.</span>
                 <p class="maps" data-animar="d"><a href="https://maps.app.goo.gl/yzQf5j2jr2nvfjLc7" target="_blank">📍
                         Rua Rendeira, 46 - São Paulo, SP</a></p>
                 <p data-animar="d">📞 (11) 98260-8489</p>
@@ -133,7 +146,7 @@
                     </div>
 
                     <div class="tiktok">
-                        <a href="#" target="_blank">
+                        <a href="https://www.tiktok.com/@fanny_t_oya_e_7saias?_t=ZM-8vuWmZ5fwuN&_r=1" target="_blank">
                             <img src="img/tiktok.png" alt="Tiktok" width="100%" height="100%">
                         </a>
                     </div>
