--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
 
 <body>
     <header class="hero">
+        <div class="logo" data-animar="c">
+            <img src="img/tatologo.png" alt="Logo Fanny Tattoo" width="100%" height="100%">
+        </div>
+
         <div class="container__home">
             <h1 data-animar="b">Fanny Tatuadora</h1>
             <div class="horarios" data-animar="c">
