--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
     </main>
 
     <footer>
-        <p>© 2025 Fanny Tattoo. Todos os direitos reservados.</p>
+        <p>© 2025 @janpyweb. Todos os direitos reservados.</p>
     </footer>
 
     <script src="script/script.js"></script>
